IP BOM CR16 integration + Remove the Social module until generic